--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidx-espresso-core = "3.6.1"
 androidx-lifecycle = "2.8.4"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.2.1"
-compose-multiplatform = "1.8.0"
+compose-multiplatform = "1.8.1"
 coreSplashscreen = "1.0.1"
 junit = "4.13.2"
 kotlin = "2.1.20"
@@ -19,7 +19,7 @@ kotlinxSerializationJson = "1.8.1"                          # for serialisation
 materialIconsCore = "1.7.3"                                 # for material icons
 navigationCompose = "2.9.0-beta01"                          # for navigation
 ktor = "3.1.3"                                              # for networking
-datastore = "1.1.6"                                         # for local storage(like shared_pref)
+datastore = "1.1.7"                                         # for local storage(like shared_pref)
 koin = "4.0.4"                                              # for di
 
 
@@ -41,6 +41,7 @@ androidx-lifecycle-runtime-compose = { group = "org.jetbrains.androidx.lifecycle
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 material-icons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "materialIconsCore" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
