--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+# use if ios build causing errors due to koin viewmodel etc.
+kotlin.native.cacheKind=none
