--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.11.0"
-android-compileSdk = "35"
+android-compileSdk = "36"
 android-minSdk = "24"
 android-targetSdk = "35"
 androidx-activityCompose = "1.10.1"
@@ -15,13 +15,14 @@ compose-multiplatform = "1.8.2"
 coreSplashscreen = "1.0.1"
 junit = "4.13.2"
 kotlin = "2.2.0"
-kotlinxDatetime = "0.7.0"                                   # for date time
+kotlinxDatetime = "0.7.1"                                   # for date time
 kotlinxSerializationJson = "1.9.0"                          # for serialisation
 materialIconsCore = "1.7.3"                                 # for material icons
 navigationCompose = "2.9.0-beta03"                          # for navigation
-ktor = "3.1.3"                                              # for networking
+ktor = "3.2.1"                                              # for networking
 datastore = "1.1.7"                                         # for local storage(like shared_pref)
 koin = "4.1.0"                                              # for di
+phonePe = "2.4.3"                                           # for phonePe Sdk (Android)
 
 
 
@@ -57,6 +58,7 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+phonePe-intentsdk-android = { module = "phonepe.intentsdk.android.release:IntentSDK", version.ref = "phonePe" }
 
 
 [plugins]
